--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,2 @@
 MONGO_URI="mongodb+srv://admin:pDogFSClsQHr0GPA@nextjscrud.f23ethh.mongodb.net/?retryWrites=true&w=majority"
+BASE_URL="http://localhost:3000/"
